<resources>
    <string name="app_name">Bubble sort</string>
    <string name="text_title_iteration">Iteración</string>
    <string name="text_subtitle_action">Acción</string>
    <string name="text_description">El algoritmo de ordenamiento de burbujas es uno de los algoritmos de ordenamiento más sencillos aunque no es le mas eficiente. Su simplicidad lo convierte en un algoritmo ideal para practicar programación.</string>
    <string name="text_subtitle_compare">Comparar</string>
    <string name="exchange">Intercambiar</string>
    <string name="next">Siguiente</string>
    <string name="back">Anterior</string>
    <string name="cero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="image1">imgPosicion1</string>
    <string name="image2">imgPosicion2</string>
    <string name="image3">imgPosicion3</string>
    <string name="image4">imgPosicion4</string>
    <string name="image5">imgPosicion5</string>
</resources>