<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewFive"
        android:layout_width="@dimen/medium_gap"
        android:layout_height="@dimen/medium_gap"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/cinco_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewTwo"
        android:layout_width="@dimen/medium_gap"
        android:layout_height="@dimen/medium_gap"
        android:layout_marginEnd="240dp"
        android:src="@drawable/dos_normal"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewFive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewFive"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageViewFour"
        android:layout_width="@dimen/medium_gap"
        android:layout_height="@dimen/medium_gap"
        android:layout_marginTop="32dp"
        android:src="@drawable/cuatro_normal"
        android:layout_marginStart="@dimen/small_gap"
        app:layout_constraintStart_toEndOf="@+id/imageViewTwo"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewOne"
        android:layout_width="@dimen/medium_gap"
        android:layout_height="@dimen/medium_gap"
        android:layout_marginStart="@dimen/small_gap"
        android:layout_marginTop="32dp"

        android:src="@drawable/uno_normal"
        app:layout_constraintStart_toEndOf="@+id/imageViewFour"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewThree"
        android:layout_width="@dimen/medium_gap"
        android:layout_height="@dimen/medium_gap"
        android:layout_marginStart="@dimen/small_gap"
        android:layout_marginEnd="30dp"
        android:src="@drawable/tres_normal"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewOne"
        app:layout_constraintTop_toTopOf="@+id/imageViewOne" />

    <Button
        android:id="@+id/Action_BtnNext"
        android:layout_width="@dimen/big_gap"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22000003" />

    <Button
        android:id="@+id/Action_BtnBlack"
        android:layout_width="@dimen/big_gap"
        android:layout_height="48dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22000003" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="95dp"
        android:layout_height="29dp"
        android:layout_marginBottom="468dp"
        android:text="@string/text_title_iteration"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="@dimen/medium_gap"
        android:layout_height="@dimen/big_gap"
        android:layout_marginTop="@dimen/small_gap"
        android:text="1"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="74dp"
        android:layout_height="29dp"
        android:text="@string/text_subtitle_action"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/Description"
        android:layout_width="360dp"
        android:layout_height="@dimen/big_gap"
        android:layout_marginTop="@dimen/medium_gap"
        android:text="@string/text_description"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>